test: minimal edge function only (ping)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
-{
+﻿{
   "name": "die-link-vercel",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vercel dev"
   },
